welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def run{
  croix(Color.red)
  avance()
  avance()
  croix(Color.cyan)
  right()
  avance()
  avance()
  left()
  recule()
  recule()
  recule()
  recule()
  croix(Color.orange)
  recule()
  recule()
  recule()
  recule()
  right()
  avance()
  avance()
  left()
  croix(Color.pink)
  avance()
  avance()
  croix(Color.green)
}

def croix(c:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  avance()
  avance()
  recule()
  left()
  avance()
  recule()
  recule()
  avance()
  setCouleutBrosse(Color.yellow)
  right()
  leveBrosse()
  avance()
}